# fastapi-boilerplate-with-poetry

./: .gitignore  Dockerfile  docker-compose.yml  product.db  pyproject.toml
src/: database.py  main.py
src/login/: schemas.py
src/product/: database.py  models.py  router.py  schemas.py
src/routers/: login_router.py  products_router.py  seller_router.py
src/seller/: models.py  schemas.py
