[tool.poetry]
name = "day1"
version = "0.1.0"
description = ""
authors = ["sohanur rahman <shohanur.rahman@gennext.net>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"

[tool.poetry.scripts]
app = "src.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
